syntax="proto3";

package executor;

message ChainSyncRequest{
    uint64  currentNumber  = 1;
    uint64  requiredNumber = 2;
    uint64  peerId         = 3;
}

message WorldStateSyncRequest {
    uint64  target   = 1;
    uint64  peerId   = 2;
}

message WorldStateContext {
    bytes  payload = 1;
}